--- a/audio.html
+++ b/audio.html
@@ -200,8 +200,11 @@ function stopLocal() {
 }
 
 function playLocal() {
-  stopLocal();
-  sessionStorage.start = context.currentTime;
+ if (source) {
+    sessionStorage.offset += context.currentTime - sessionStorage.start;
+    source.noteOff(0);
+  }
+    sessionStorage.start = context.currentTime;
   source = context.createBufferSource();
   // Connect graph
   source.buffer = audioBuffer;
