--- a/audio.html
+++ b/audio.html
@@ -227,6 +227,7 @@ socket.on('sync', function (data){
   shouldPlay = 1;
   startTime = 0;
   offset = 0;
+  source.noteOff(0);
   source = null;
   playLocal();
 })
