--- a/audio.html
+++ b/audio.html
@@ -225,8 +225,16 @@ socket.on('pause', function (data) {
 });
 
 socket.on('sync', function (data){
+  startTime = 0;
+  offset = 0;
    source.noteOff(0);
-   source.start(0);
+   source = context.createBufferSource();
+  // Connect graph
+  source.buffer = audioBuffer;
+  source.loop = true;
+  source.connect(context.destination);
+  source.start(0);
+
 })
 
 socket.on('slaveStartStreamTime', function (data){
