adding volume slider

--- a/audio.html
+++ b/audio.html
@@ -65,7 +65,7 @@
       </div>
       <br>
       <div>
-        <input type="range" min="0" max="100" step="1" value="75" onchange="volumeChange(this.value)">      </div>
+        <input id="volume" type="range" min="0" max="1" step=".1" value=".75" onchange="volumeChange(this.value)">      </div>
       <div>
         <p class="left">Audio files are loaded using the infamous <a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">webaudio api</a> and sent using <a href="http://binaryjs.com/">binaryJS</a>. Real time communications are accomplished through <a href="http://socket.io/">socket.io.</a> </p>
       </div>
@@ -228,12 +228,14 @@ function volumeChange(value){
 
 socket.on('volume', function(data){
   gainNode.gain.value = value;
+  $('#volume').val(value);
 })
 
 socket.on('play', function (data) {
   shouldPlay = 1;
   playLocal();
 });
+
 socket.on('pause', function (data) {
   shouldPlay = 0;
   stopLocal();
