--- a/audio.html
+++ b/audio.html
@@ -227,8 +227,8 @@ function volumeChange(value){
 }
 
 socket.on('volume', function(data){
-  gainNode.gain.value = value;
-  $('#volume').attr("value", value);
+  gainNode.gain.value = data;
+  $('#volume').attr("value", data);
   console.log('volume = ' + data);
 })
 
