--- a/audio.html
+++ b/audio.html
@@ -118,6 +118,7 @@
   var streamData = [];
   var isBufferReady = 1;
   var shouldPlay = 0;
+  var shouldVisualize = 0;
 
   var binaryHost = location.origin.replace(/^http/, 'ws');
 	var client = new BinaryClient(binaryHost + '/binary-endpoint');
@@ -152,6 +153,7 @@
     		var now = new Date().getTime();
     		console.log("time to fetch all data: " + (now - startTime.getTime()) + " ms");
       	console.log("total buffers: " + streamData.length + " , total size: " + (size/1000000) + " mb");
+        shouldVisualize = 1;
     	});
 	});
 
@@ -174,11 +176,12 @@
         client.send(file);
         var now = new Date();
         socket.emit('masterSend', now.getTime());
-        shouldPlay = 0;
+        shouldPlay = 1;
         fileReader.readAsArrayBuffer(file);
         if(source){
           source.noteOff(0);
         }
+        shouldVisualize = 1;
     }, false);
 
   fileReader.onloadend =  function(e){
@@ -187,7 +190,6 @@
     //audio.initAudio(fileReader.result);
     // Get more blobs when finished:
     isBufferReady = 1;
-
     /*for (var i = 0; i < n; i++) {
       resetParticle(i);
       pl[i] = Math.floor(Math.random() * life);
@@ -235,7 +237,9 @@ function playLocal() {
   // Start playback, but make sure we stay in bound of the buffer.
   if (shouldPlay) {
     source.start(0, offset);
-    initVisualizer();
+    if(shouldVisualize){
+      initVisualizer();
+    }
   }
 }
 
