--- a/audio.html
+++ b/audio.html
@@ -119,6 +119,9 @@
   var isBufferReady = 1;
   var shouldPlay = 0;
   var shouldVisualize = 0;
+  var visualizerExists = 0;
+  var finalSize = -1;
+  var totalSize = 0;
 
   var binaryHost = location.origin.replace(/^http/, 'ws');
 	var client = new BinaryClient(binaryHost + '/binary-endpoint');
@@ -153,7 +156,7 @@
     		var now = new Date().getTime();
     		console.log("time to fetch all data: " + (now - startTime.getTime()) + " ms");
       	console.log("total buffers: " + streamData.length + " , total size: " + (size/1000000) + " mb");
-        shouldVisualize = 1;
+        finalSize = size;
     	});
 	});
 
@@ -182,6 +185,11 @@
           source.noteOff(0);
         }
         shouldVisualize = 1;
+
+
+        finalSize = -10;
+        totalSize = -10;
+
     }, false);
 
   fileReader.onloadend =  function(e){
@@ -190,6 +198,8 @@
     //audio.initAudio(fileReader.result);
     // Get more blobs when finished:
     isBufferReady = 1;
+    totalSize = finalSize;
+    // if(fileReader.result.size == size);
     /*for (var i = 0; i < n; i++) {
       resetParticle(i);
       pl[i] = Math.floor(Math.random() * life);
@@ -237,13 +247,18 @@ function playLocal() {
   // Start playback, but make sure we stay in bound of the buffer.
   if (shouldPlay) {
     source.start(0, offset);
-    if(shouldVisualize){
-      initVisualizer();
+
+
+    if(!visualizerExists && shouldVisualize){
+      if(finalSize == totalSize){
+        initVisualizer();
+      }
     }
   }
 }
 
 function initVisualizer(){
+  visualizerExists = 1;
   processor = context.createJavaScriptNode(2048 , 1 , 1 );
   analyser = context.createAnalyser();
   source.connect(context.destination);
