--- a/audio.html
+++ b/audio.html
@@ -157,6 +157,8 @@
     		console.log("time to fetch all data: " + (now - startTime.getTime()) + " ms");
       	console.log("total buffers: " + streamData.length + " , total size: " + (size/1000000) + " mb");
         finalSize = size;
+        streamAudio();
+        shouldVisualize = 1;
     	});
 	});
 
