--- a/audio.html
+++ b/audio.html
@@ -117,11 +117,9 @@
   //Stream source?
   var streamData = [];
   var isBufferReady = 1;
-  var shouldPlay = 0;
+  var shouldPlay = 1;
   var shouldVisualize = 0;
   var visualizerExists = 0;
-  var finalSize = -1;
-  var totalSize = 0;
 
   var binaryHost = location.origin.replace(/^http/, 'ws');
 	var client = new BinaryClient(binaryHost + '/binary-endpoint');
@@ -156,9 +154,7 @@
     		var now = new Date().getTime();
     		console.log("time to fetch all data: " + (now - startTime.getTime()) + " ms");
       	console.log("total buffers: " + streamData.length + " , total size: " + (size/1000000) + " mb");
-        finalSize = size;
-        streamAudio();
-        shouldVisualize = 1;
+        shouldVisualize = 0;
     	});
 	});
 
@@ -188,10 +184,6 @@
         }
         shouldVisualize = 1;
 
-
-        finalSize = -10;
-        totalSize = -10;
-
     }, false);
 
   fileReader.onloadend =  function(e){
@@ -200,20 +192,12 @@
     //audio.initAudio(fileReader.result);
     // Get more blobs when finished:
     isBufferReady = 1;
-    totalSize = finalSize;
-    // if(fileReader.result.size == size);
-    /*for (var i = 0; i < n; i++) {
-      resetParticle(i);
-      pl[i] = Math.floor(Math.random() * life);
-    }
-    requestAnimationFrame(updateFrame);*/
   };
 
   function initSound(buf) {
     context.decodeAudioData(buf, function(buffer) {
       audioBuffer = null;
       audioBuffer = buffer;
-      //audio.initAudio(buffer);]source = context.createBufferSource();
       playLocal();
     });
   }
@@ -236,52 +220,41 @@ function playLocal() {
   source = context.createBufferSource();
   // Connect graph
   source.buffer = audioBuffer;
-
-  // processor = context.createJavaScriptNode(2048 , 1 , 1 );
-  // analyser = context.createAnalyser();
-  // source.connect(context.destination);
-  // source.connect(analyser);
-  // analyser.connect(processor);
-  // processor.connect(context.destination);
-  // playing = true;
+  source.connect(context.destination);
 
   source.loop = true;
   // Start playback, but make sure we stay in bound of the buffer.
   if (shouldPlay) {
     source.start(0, offset);
 
-
-    if(!visualizerExists && shouldVisualize){
-      if(finalSize == totalSize){
-        initVisualizer();
-      }
-    }
+    // if(!visualizerExists && shouldVisualize){
+    //   initVisualizer();
+    // }
   }
 }
 
-function initVisualizer(){
-  visualizerExists = 1;
-  processor = context.createJavaScriptNode(2048 , 1 , 1 );
-  analyser = context.createAnalyser();
-  source.connect(context.destination);
-  source.connect(analyser);
-  analyser.connect(processor);
-  processor.connect(context.destination);
-  playing = true;
+// function initVisualizer(){
+//   visualizerExists = 1;
+//   processor = context.createJavaScriptNode(2048 , 1 , 1 );
+//   analyser = context.createAnalyser();
+//   source.connect(analyser);
+//   analyser.connect(processor);
+//   processor.connect(context.destination);
+//   playing = true;
 
-}
-
+// }
 
 
-window.onload = function() {
 
-  for (var i = 0; i < n; i++) {
-    resetParticle(i);
-    pl[i] = Math.floor(Math.random() * life);
-  }
+// window.onload = function() {
 
-  requestAnimationFrame(updateFrame);
-}
+//   for (var i = 0; i < n; i++) {
+//     resetParticle(i);
+//     pl[i] = Math.floor(Math.random() * life);
+//   }
+
+//   requestAnimationFrame(updateFrame);
+// }
 
 
 
