--- a/audio.html
+++ b/audio.html
@@ -196,7 +196,7 @@
     //audioBuffer = fileReader.result;
     //audio.initAudio(fileReader.result);
     // Get more blobs when finished:
-    if(finalSize = size){
+    if(finalSize == size){
       shouldVisualize = 1;
     }
     isBufferReady = 1;
