--- a/audio.html
+++ b/audio.html
@@ -90,11 +90,11 @@
 	
 
 
-   <script src="FluidField.js"></script>
-   <script src="FluidDisplay.js"></script>
-   <script src="Music.js"></script>
-   <script src="BeatDetector.js"></script>
-   <script src="Visualizer.js"></script>  
+    <!-- <script src="FluidField.js"></script>
+   // <script src="FluidDisplay.js"></script>
+   // <script src="Music.js"></script>
+   // <script src="BeatDetector.js"></script>
+   // <script src="Visualizer.js"></script>  --> 
   <script>
 
 
@@ -239,16 +239,17 @@ function playLocal() {
   }
 }
 
-function initVisualizer(){
-  visualizerExists = 1;
-  processor = context.createJavaScriptNode(2048 , 1 , 1 );
-  analyser = context.createAnalyser();
-  source.connect(analyser);
-  analyser.connect(processor);
-  processor.connect(context.destination);
-  playing = true;
 
-}
+// function initVisualizer(){
+//   visualizerExists = 1;
+//   processor = context.createJavaScriptNode(2048 , 1 , 1 );
+//   analyser = context.createAnalyser();
+//   source.connect(analyser);
+//   analyser.connect(processor);
+//   processor.connect(context.destination);
+//   playing = true;
+
+// }
 
 
 // window.onload = function() {
