reduced num particles

--- a/audio.html
+++ b/audio.html
@@ -90,11 +90,11 @@
 	
 
 
-    <!-- <script src="FluidField.js"></script>
-   // <script src="FluidDisplay.js"></script>
-   // <script src="Music.js"></script>
-   // <script src="BeatDetector.js"></script>
-   // <script src="Visualizer.js"></script>  --> 
+   <script src="FluidField.js"></script>
+    <script src="FluidDisplay.js"></script>
+    <script src="Music.js"></script>
+   <script src="BeatDetector.js"></script>
+    <script src="Visualizer.js"></script>
   <script>
 
 
@@ -234,32 +234,32 @@ function playLocal() {
     source.start(0, offset);
 
     // if((visualizerExists == 0)  && shouldVisualize){
-    //   //initVisualizer();
+      initVisualizer();
     // }
   }
 }
 
 
-// function initVisualizer(){
-//   visualizerExists = 1;
-//   processor = context.createJavaScriptNode(2048 , 1 , 1 );
-//   analyser = context.createAnalyser();
-//   source.connect(analyser);
-//   analyser.connect(processor);
-//   processor.connect(context.destination);
-//   playing = true;
+function initVisualizer(){
+  visualizerExists = 1;
+  processor = context.createJavaScriptNode(2048 , 1 , 1 );
+  analyser = context.createAnalyser();
+  source.connect(analyser);
+  analyser.connect(processor);
+  processor.connect(context.destination);
+  playing = true;
 
-// }
+}
 
 
-// window.onload = function() {
-//   for (var i = 0; i < n; i++) {
-//     resetParticle(i);
-//     pl[i] = Math.floor(Math.random() * life);
-//   }
+window.onload = function() {
+  for (var i = 0; i < n; i++) {
+    resetParticle(i);
+    pl[i] = Math.floor(Math.random() * life);
+  }
 
-//   requestAnimationFrame(updateFrame);
-// }
+  requestAnimationFrame(updateFrame);
+}
 
 
 
