--- a/audio.html
+++ b/audio.html
@@ -90,11 +90,11 @@
 	
 
 
-   <script src="FluidField.js"></script>
-    <script src="FluidDisplay.js"></script>
-    <script src="Music.js"></script>
-   <script src="BeatDetector.js"></script>
-    <script src="Visualizer.js"></script>
+  <!--  // <script src="FluidField.js"></script>
+   //  <script src="FluidDisplay.js"></script>
+   //  <script src="Music.js"></script>
+   // <script src="BeatDetector.js"></script>
+   //  <script src="Visualizer.js"></script> -->
   <script>
 
 
@@ -160,7 +160,7 @@
         shouldVisualize = 0;
         finalSize = size;
 
-        startVisualizer();
+        // startVisualizer();
 
     	});
 	});
@@ -189,7 +189,7 @@
         if(source){
           source.noteOff(0);
         }
-        startVisualizer();
+        // startVisualizer();
 
     }, false);
 
@@ -238,32 +238,32 @@ function playLocal() {
   }
 }
 
-function startVisualizer(){
-  setTimeout(function(){
-    initVisualizer()
-  }, 1000);
-}
+// function startVisualizer(){
+//   setTimeout(function(){
+//     initVisualizer()
+//   }, 1000);
+// }
 
-function initVisualizer(){
-  visualizerExists = 1;
-  processor = context.createJavaScriptNode(2048 , 1 , 1 );
-  analyser = context.createAnalyser();
-  source.connect(analyser);
-  analyser.connect(processor);
-  processor.connect(context.destination);
-  playing = true;
+// function initVisualizer(){
+//   visualizerExists = 1;
+//   processor = context.createJavaScriptNode(2048 , 1 , 1 );
+//   analyser = context.createAnalyser();
+//   source.connect(analyser);
+//   analyser.connect(processor);
+//   processor.connect(context.destination);
+//   playing = true;
 
-}
+// }
 
 
-window.onload = function() {
-  for (var i = 0; i < n; i++) {
-    resetParticle(i);
-    pl[i] = Math.floor(Math.random() * life);
-  }
+// window.onload = function() {
+//   for (var i = 0; i < n; i++) {
+//     resetParticle(i);
+//     pl[i] = Math.floor(Math.random() * life);
+//   }
 
-  requestAnimationFrame(updateFrame);
-}
+//   requestAnimationFrame(updateFrame);
+// }
 
 
 
