--- a/audio.html
+++ b/audio.html
@@ -156,9 +156,7 @@
     		var now = new Date().getTime();
     		console.log("time to fetch all data: " + (now - startTime.getTime()) + " ms");
       	console.log("total buffers: " + streamData.length + " , total size: " + (size/1000000) + " mb");
-        shouldVisualize = 0;
-
-        // startVisualizer();
+        // shouldVisualize = 0;
 
     	});
 	});
@@ -169,11 +167,6 @@
       var blob = new Blob(streamData);
       fileReader.readAsArrayBuffer(blob);
     }
-  }
-
-  function createStream(){
-    //streamingAudioSource = context.createMediaStreamSource(streamData);
-
   }
 
 	var fileInput = document.querySelector('input[type="file"]');
@@ -187,6 +180,8 @@
         if(source){
           startTime = context.currentTime;
           source.noteOff(0);
+          source = null;
+          source.disconnect();
         }
         // startVisualizer();
 
